Errors
gil@gil-VirtualBox:~/Desktop/compilation course/compiler 2025/part2$ make clean
rm -f parser parser.o lex.yy.o semantic.o symbol_table.o y.tab.c y.tab.h lex.yy.c
gil@gil-VirtualBox:~/Desktop/compilation course/compiler 2025/part2$ yacc -d -v parser.y
parser.y: warning: 3 shift/reduce conflicts [-Wconflicts-sr]
parser.y: note: rerun with option '-Wcounterexamples' to generate conflict counterexamples
gil@gil-VirtualBox:~/Desktop/compilation course/compiler 2025/part2$ lex scanner.l
gil@gil-VirtualBox:~/Desktop/compilation course/compiler 2025/part2$ gcc -o parser y.tab.c lex.yy.c semantic.c symbol_table.c -I. -lfl
semantic.c: In function ‘semTypeOfNode’:
semantic.c:79:17: error: invalid use of incomplete typedef ‘node’
   79 |         return n->type;
      |                 ^~
